# WebServerApiRust

./: .env  Cargo.toml  README.md
migrations/2023-01-06-154656_create_bbdd/: up.sql
src/: main.rs  schema.rs
src/api/: car_to_repair_api.rs  garage_api.rs  mod.rs  working_cars_api.rs
src/models/: mod.rs  model_car_to_repair.rs  model_garage.rs  model_working_cars.rs
src/templates/: assigned_cars.html  cars.html  create_car.html  garages.html  index.html
src/web_pages/: cars_web.rs  garages_web.rs  mod.rs
